Fixed QueryStringTest (and renamed)
- Originally it did not test anything, just passed through

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>